tests/security/taintedInputToParam/output.txt
ERROR: TaintedData - input.hack:14:22 - Data from a URL query string found its way to a SQL query